// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disables 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    disabled={true}
    onPress={[Function]}
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Push Me
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`matches last snapshot 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    disabled={false}
    onPress={[Function]}
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Push Me
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;
